Fixed info container alignment in homepage

--- a/frontend/src/pages/Homepage/Homepage.scss
+++ b/frontend/src/pages/Homepage/Homepage.scss
@@ -23,22 +23,24 @@
 	display: flex;
 	flex-direction: row;
 	gap: 2rem;
+	height: 65vh;
 }
 
 .leftContainer {
 	width: 50%;
+	height: 100%;
 	display: flex;
 	flex-direction: column;
 	gap: 2rem;
 	button {
-		height: 18vh;
+		height: 100%;
 		width: 30vw;
 	}
 }
 
 .history {
 	width: 40vw;
-	height: 62vh;
+	height: 100%;
 	border-radius: 30px;
 	background-color: var(--primary-color);
 	.top {
